3-deployment/3-cert-manager/05-whoami-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - whoami.wuhanstudio.local
    secretName: whoami-tls
  rules:
    - host: whoami.wuhanstudio.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
